--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     width:100%
 
 }
+
 .williams-flex{
     width :100%;
     height: 180;
@@ -30,7 +31,7 @@
     margin: 20px 0px;
 }
 
-@media(max-width:576){
+@media(max-width:576 px){
     .blog-container
     {
     width:auto;
@@ -48,6 +49,10 @@
 
 
 }
+@media (max-width:667px){
+    
+}
+
 
 
 
